# audio_device_changer

./: .gitignore  README.md  pyproject.toml
audio_device_changer/: MainWindow.py  change_devices.bat  test.bat
tests/: test.py
